--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -224,6 +224,21 @@
         precioVenta = 0;
     }
 
+    public bool ExisteEnLaBaseDeDatos(int id)
+    {
+        Contexto db = new Contexto();
+        var buscado = db.Ventas.Find(id);
+        bool paso = true;
+
+        if (buscado == null)
+        {
+
+            paso = false;
+        }
+
+        return paso;
+    }
+
     private void Guardar()
     {
         if (ventas.VentasDetalles.Count == 0)
@@ -232,12 +247,18 @@
             return;
         }
 
-
         if (ventas.VentaId > 0)
         {
-            ventascontroller.Guardar(ventas);
-            toastService.ShowSuccess("Has modificado la venta exitosamente", "Modificado!");
-            Nuevo();
+            if (ExisteEnLaBaseDeDatos(ventas.VentaId))
+            {
+                ventascontroller.Guardar(ventas);
+                toastService.ShowSuccess("Has modificado la venta exitosamente", "Modificado!");
+                Nuevo();
+            }
+            else
+            {
+                toastService.ShowError("No se puede modificar un pago que no existe", "No Existe!");
+            }
         }
         else if (ventas.VentaId == 0)
         {
