Cambios de validacion

--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -226,15 +226,24 @@
     private bool NivelDeUsuario;
     protected override void OnInitialized()
     {
-        if (Id > 0)
+        try
         {
-            compras = comprascontroller.Buscar(Id);
+            if (Id > 0)
+            {
+                compras = comprascontroller.Buscar(Id);
+            }
+
+            NivelDeUsuario = AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.IsInRole("Cajero");
+            listaProductos = productoscontrollers.GetList(p => true);
+            ProveedorLista = proveedorescontrollers.GetList(p => true);
+            productos = new Productos();
+        }
+        catch (Exception)
+        {
+
+            toastService.ShowWarning("No hay ningún Proveedor o Producto agregado", "No hay Porveedores o Productos!");
         }
 
-        NivelDeUsuario = AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.IsInRole("Cajero");
-        listaProductos = productoscontrollers.GetList(p => true);
-        ProveedorLista = proveedorescontrollers.GetList(p => true);
-        productos = new Productos();
     }
 
     private void Nuevo()
@@ -243,6 +252,23 @@
         ProductoId = string.Empty;
         cantidad = 0;
         productos.PrecioCompra = 0;
+    }
+
+    public bool ExistenPagos()
+    {
+        bool paso = false;
+        List<PagosDetalle> listapagos = new List<PagosDetalle>();
+        listapagos = pagoscontroller.GetListPagos(D => true);
+        foreach (var item in listapagos)
+        {
+            if(item.CompraId == compras.CompraId)
+            {
+                paso = true;
+                break;
+            }
+        }
+
+        return paso;
     }
 
     public bool ExisteEnLaBaseDeDatos(int id)
@@ -282,6 +308,12 @@
         {
             if (compras.CompraId > 0)
             {
+                if (ExistenPagos())
+                {
+                    toastService.ShowWarning("No se puede modificar una compra si tiene un pago", "Tiene Un Pago!");
+                    return;
+                }
+
                 if (ExisteEnLaBaseDeDatos(compras.CompraId))
                 {
                     comprascontroller.Guardar(compras);
@@ -315,6 +347,12 @@
 
     private void Eliminar()
     {
+        if (ExistenPagos())
+        {
+            toastService.ShowWarning("No se puede eliminar una compra si tiene un pago", "Tiene Un Pago!");
+            return;
+        }
+
         if (comprascontroller.Eliminar(compras.CompraId))
         {
             toastService.ShowInfo("Has eliminado correctamente", "Eliminado!");
