Arreglando cosas de la paginacion

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProveedores.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProveedores.razor
@@ -110,7 +110,7 @@
 
     protected override void OnInitialized()
     {
-        conteo = Contexto.Compras.Count();
+        conteo = Contexto.Proveedores.Count();
         totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
         Lista = proveedorescontrollers.GetList(p => true);
         this.Lista = Contexto.Proveedores.Take(paginacion.CantidadMostrar).ToList();
