--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -170,7 +170,7 @@
     protected override void OnInitialized()
     {
         NivelDeUsuario = AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.IsInRole("Administrador");
-        conteo = Contexto.Compras.Count();
+        conteo = Contexto.Usuarios.Count();
         totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
         Lista = usuariocontroller.GetList(p => true);
         this.Lista = Contexto.Usuarios.Take(paginacion.CantidadMostrar).ToList();
