Arreglando consas de compiar y pegar

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -212,7 +212,7 @@
                 {
                     //Todos
                     case 0:
-                        conteo = Contexto.Compras.Count();
+                        conteo = Contexto.Usuarios.Count();
                         totaldepaginas = Math.Ceiling(conteo / paginacion.CantidadMostrar);
                         Lista = usuariocontroller.GetList(p => true);
                         this.Lista = Contexto.Usuarios.Take(paginacion.CantidadMostrar).ToList();
