Dando espacio a los registros

--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -203,7 +203,8 @@
  </section>
 }
 
-
+<br />
+<br />
 
 @code {
 
@@ -374,7 +375,7 @@
         }
         else
         {
-            toastService.ShowWarning("No se pudo econtrar la compra", "No encontrado!");
+            toastService.ShowWarning("No se pudo encontrar la compra", "No encontrado!");
         }
     }
 
