Agregando un placeholder

--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -96,7 +96,7 @@
 
             <div class="form-group">
                 <label for="Nombre">Nombre</label>
-                <InputText @bind-Value="productos.Nombre" class="form-control"></InputText>
+                <InputText @bind-Value="productos.Nombre" class="form-control"  placeholder="Tu nombre aquí"></InputText>
                 <ValidationMessage For="(()=>productos.Nombre)"></ValidationMessage>
             </div>
 
