--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -189,7 +189,7 @@
     {
         try
         {
-            Lista = Lista.Where(p => p.FechaIngreso >= desdeFecha && p.FechaIngreso <= p.FechaIngreso).ToList();
+            Lista = Lista.Where(p => p.FechaIngreso >= desdeFecha && p.FechaIngreso <= hastaFecha).ToList();
         }
         catch (Exception)
         {
