Quitando los placeholders de los registros

--- a/ProyectoFinal-Aplicada2/Pages/CategoriasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/CategoriasComponent.razor
@@ -87,7 +87,7 @@
         
         <div class="form-group">
             <label for="Descripcion">Nombre de la Categoría</label>
-            <InputText @bind-Value="categoria.NombreCategoria" class="form-control" placeholder="Categoría"></InputText>
+            <InputText @bind-Value="categoria.NombreCategoria" class="form-control"></InputText>
             <ValidationMessage For="(() => categoria.NombreCategoria)"></ValidationMessage>
         </div>
 
