--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -96,7 +96,7 @@
 
         <div class="form-group">
             <label for="Descripcion">Descripcion</label>
-            <InputText @bind-Value="compras.DescripcionCompra" class="form-control" placeholder="descripcion aquí"></InputText>
+            <InputText @bind-Value="compras.DescripcionCompra" class="form-control"></InputText>
             <ValidationMessage For="(() => compras.DescripcionCompra)"></ValidationMessage>
         </div>
 
