--- a/ProyectoFinal-Aplicada2/Pages/ProveedoresComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProveedoresComponent.razor
@@ -89,19 +89,19 @@
 
             <div class="form-group">
                 <label for="NombreProveedor">Nombre</label>
-                <InputText @bind-Value="proveedores.NombreProveedor" class="form-control"  placeholder="Nombre aquí"></InputText>
+                <InputText @bind-Value="proveedores.NombreProveedor" class="form-control"></InputText>
                 <ValidationMessage For="(()=>proveedores.NombreProveedor)"></ValidationMessage>
             </div>
 
             <div class="form-group">
                 <label for="Telefono">Telefono</label>
-                <InputText @bind-Value="proveedores.Telefono" class="form-control"  placeholder="Teléfono aquí"></InputText>
+                <InputText @bind-Value="proveedores.Telefono" class="form-control" ></InputText>
                 <ValidationMessage For="(()=>proveedores.Telefono)"></ValidationMessage>
             </div>
 
             <div class="form-group">
                 <label for="RNC">RNC</label>
-                <InputText @bind-Value="proveedores.RNC" class="form-control"  placeholder="RNC aquí"></InputText>
+                <InputText @bind-Value="proveedores.RNC" class="form-control" ></InputText>
                 <ValidationMessage For="(()=>proveedores.RNC)"></ValidationMessage>
             </div>
 
@@ -118,7 +118,7 @@
 
             <div class="form-group">
                 <label for="Direccion">Dirección</label>
-                <InputText @bind-Value="proveedores.Direcciones" class="form-control"  placeholder="Dirección aquí"></InputText>
+                <InputText @bind-Value="proveedores.Direcciones" class="form-control" ></InputText>
                 <ValidationMessage For="(()=>proveedores.Direcciones)"></ValidationMessage>
             </div>
 
