--- a/ProyectoFinal-Aplicada2/Pages/ClientesComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ClientesComponent.razor
@@ -70,19 +70,19 @@
                
             <div class="form-group">
                 <label for="Nombres">Nombres</label>
-                <InputText @bind-Value="clientes.Nombres" class="form-control" placeholder="Nombres aquí"></InputText>
+                <InputText @bind-Value="clientes.Nombres" class="form-control" ></InputText>
                 <ValidationMessage For="(() => clientes.Nombres)"></ValidationMessage>
             </div>
 
             <div class="form-group">
                 <label for="Apellidos">Apellidos</label>
-                <InputText @bind-Value="clientes.Apellidos" class="form-control" placeholder="Apellidos aquí"></InputText>
+                <InputText @bind-Value="clientes.Apellidos" class="form-control"></InputText>
                 <ValidationMessage For="(() => clientes.Apellidos)"></ValidationMessage>
             </div>
 
             <div class="form-group">
                 <label for="Telefono_O_Celular">Ingrese su número de teléfono o celular</label>
-                <InputText @bind-Value="clientes.Numero" class="form-control" placeholder="celular o teléfono aquí"></InputText>
+                <InputText @bind-Value="clientes.Numero" class="form-control" ></InputText>
                 <ValidationMessage For="(() => clientes.Numero)"></ValidationMessage>
             </div>
 
